--- a/ElasticSearch.Diagnostics.Tester/App.config
+++ b/ElasticSearch.Diagnostics.Tester/App.config
@@ -34,7 +34,7 @@
 
     <sharedListeners>
       <add name="ElkNET" type="ElasticSearch.Diagnostics.ElasticSearchTraceListener, ElasticSearch.Diagnostics"
-           ElasticSearchUri="http://65.52.242.112:9200"
+           ElasticSearchUri="http://smellycat01.devint.dev-r5ead.net:9200"
            ElasticSearchIndex="trace"
            ElasticSearchTraceIndex="trace"
             traceOutputOptions="LogicalOperationStack,Callstack"
@@ -43,6 +43,8 @@
 
 
   </system.diagnostics>
+  
+  
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
